--- a/projetos.html
+++ b/projetos.html
@@ -1,57 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/projetos.css">
-    <link rel="icon" href="/img/bug-outline.svg" type="image/svg+xml">
-    <title>Projetos</title>
+    <title>Document</title>
 </head>
-
 <body>
-    <header>
-        <nav>
-            <section>
-                <article>
-                    <div class="switch" id="trilho">
-                        <div class="indicador"></div>
-                    </div>
-                </article>
-            </section>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <article>
-                <div class="principal">
-                    <div id="corpo">
-                        <img src="/img/drone.jpg" alt="drone" id="drone">
-                        <div id="desc-drone">
-                            <h1>Drone de pulverização</h1>
-                            <br>
-                            <p>Atualmente trabalho com um projetos</p>
-                        </div>
-                    </div>
-                </div>
-            </article>
-        </section>
-    </main>
-    <aside>
-        <section>
-            <article>
-
-            </article>
-        </section>
-    </aside>
-    <footer>
-        <section>
-            <article>
-
-            </article>
-        </section>
-    </footer>
-    <script src="js/start.js"></script>
+    
 </body>
-
 </html>
