--- a/sobre.html
+++ b/sobre.html
@@ -4,48 +4,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/sobre.css">
-    <link rel="icon" href="/img/bug-outline.svg" type="image/svg+xml">
-    <title>Sobre</title>
+    <link rel="stylesheet" href="/css/sobre.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Lexend+Deca:wght@100..900&family=Slabo+13px&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
+
+    <title>Document</title>
 </head>
 
 <body>
     <header>
         <nav>
-            <section>
-                <article>
-                    <div class="switch" id="trilho">
-                        <div class="indicador"></div>
-                    </div>
-                </article>
-            </section>
+            <div class="barra">
+                <div class="switch" id="trilho">
+                    <div class="indicador"></div>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
         <section>
             <article>
-                <div class="">
-                    <div id="">
-
+                <div class="fundo">
+                    <div id="quadrados">
+                        <div id="quadrado"></div>
+                        <div id="quadrado2"></div>
+                        <div id="quadrado3"></div>
+                        <div id="quadrado4"></div>
+                        <div id="quadrado5"></div>
+                    </div>
+                    <div id="riscos">
+                        <div id="risco"></div>
+                        <div id="risco2"></div>
+                        <div id="risco3"></div>
                     </div>
                 </div>
+                <div class="capa">
+                    <div id="foto">
+                        <img src="/img/p" alt="foto de perfil" id="foto-perfil">
+                    </div>
+                    <div id="nome">
+                        <h1>João Gabriel Kobielski</h1>
+                    </div>
+                    <div id="ano">
+                        <h1>2025</h1>
+                    </div>
             </article>
         </section>
     </main>
-    <aside>
-        <section>
-            <article>
-
-            </article>
-        </section>
-    </aside>
-    <footer>
-        <section>
-            <article>
-
-            </article>
-        </section>
-    </footer>
     <script src="js/start.js"></script>
 </body>
+
 </html>
