--- a/sobre.html
+++ b/sobre.html
@@ -43,13 +43,19 @@
                 </div>
                 <div class="capa">
                     <div id="foto">
-                        <img src="/img/p" alt="foto de perfil" id="foto-perfil">
+                        <img src="/img/drone.jpg" alt="foto de perfil" id="foto-perfil">
                     </div>
                     <div id="nome">
                         <h1>João Gabriel Kobielski</h1>
                     </div>
                     <div id="ano">
                         <h1>2025</h1>
+                    </div>
+                    <div id="nome-vertical">
+                        <h1>Gabriel Kobielski</h1>
+                    </div>
+                    <div id="desc">
+                        <p>Nascido no dia 25 de novembro na cidade de Erechim- Rio Grande do Sul, escondido da familia até seus 2 anos de idade por ser fruto de uma traição ele viveu em baixo de um antigo puteiro, até que um dia sua mãe colocou ele em um onibus na intenção de obrigar seu pai a assumir a criança enviandoo a Passo Fundo</p>
                     </div>
             </article>
         </section>
