--- a/sobre.html
+++ b/sobre.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="/css/sobre.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="/img/bug-outline.svg" type="image/svg+xml">
     <link
         href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Lexend+Deca:wght@100..900&family=Slabo+13px&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
-
-    <title>Document</title>
+    <title>Sobre</title>
 </head>
 
 <body>
@@ -34,6 +34,7 @@
                         <div id="quadrado3"></div>
                         <div id="quadrado4"></div>
                         <div id="quadrado5"></div>
+                        <div id="quadrado6"></div>
                     </div>
                     <div id="riscos">
                         <div id="risco"></div>
@@ -43,7 +44,7 @@
                 </div>
                 <div class="capa">
                     <div id="foto">
-                        <img src="/img/drone.jpg" alt="foto de perfil" id="foto-perfil">
+                        <img src="/img/perfil.jpeg" alt="foto de perfil" id="foto-perfil">
                     </div>
                     <div id="nome">
                         <h1>João Gabriel Kobielski</h1>
@@ -55,7 +56,18 @@
                         <h1>Gabriel Kobielski</h1>
                     </div>
                     <div id="desc">
-                        <p>Nascido no dia 25 de novembro na cidade de Erechim- Rio Grande do Sul, escondido da familia até seus 2 anos de idade por ser fruto de uma traição ele viveu em baixo de um antigo puteiro, até que um dia sua mãe colocou ele em um onibus na intenção de obrigar seu pai a assumir a criança enviandoo a Passo Fundo</p>
+                        <p>Nascido no dia 25 de novembro na cidade de Erechim- Rio Grande do Sul, escondido da familia
+                            até seus 2 anos de idade por ser fruto de uma traição ele viveu em baixo de um antigo
+                            puteiro, até que um dia sua mãe colocou ele em um onibus na intenção de obrigar seu pai a
+                            assumir a criança enviando a Passo Fundo</p>
+                    </div>
+                    <div id="setas">
+                        <a href="/projetos.html" target="_blank" id="seta-direita">
+                            <img src="/img/seta-para-a-direita.png" alt="seta para a direita">
+                        </a>
+                        <a href="/start.html" target="_blank" id="seta-esquerda">
+                            <img src="/img/seta-para-a-esquerda.png" alt="seta para a esquerda">
+                        </a>
                     </div>
             </article>
         </section>
