--- a/sobre.html
+++ b/sobre.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/sobre.css">
+    <link rel="stylesheet" href="/css/sobre/sobre.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" href="/img/bug-outline.svg" type="image/svg+xml">
@@ -34,7 +34,6 @@
                         <div id="quadrado3"></div>
                         <div id="quadrado4"></div>
                         <div id="quadrado5"></div>
-                        <div id="quadrado6"></div>
                     </div>
                     <div id="riscos">
                         <div id="risco"></div>
@@ -44,7 +43,7 @@
                 </div>
                 <div class="capa">
                     <div id="foto">
-                        <img src="/img/perfil.jpeg" alt="foto de perfil" id="foto-perfil">
+                        <img src="/img/drone.jpg" alt="foto de perfil" id="foto-perfil">
                     </div>
                     <div id="nome">
                         <h1>João Gabriel Kobielski</h1>
@@ -61,14 +60,7 @@
                             puteiro, até que um dia sua mãe colocou ele em um onibus na intenção de obrigar seu pai a
                             assumir a criança enviando a Passo Fundo</p>
                     </div>
-                    <div id="setas">
-                        <a href="/projetos.html" target="_blank" id="seta-direita">
-                            <img src="/img/seta-para-a-direita.png" alt="seta para a direita">
-                        </a>
-                        <a href="/start.html" target="_blank" id="seta-esquerda">
-                            <img src="/img/seta-para-a-esquerda.png" alt="seta para a esquerda">
-                        </a>
-                    </div>
+                    
             </article>
         </section>
     </main>
