--- a/projetos.html
+++ b/projetos.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/projetos/projetos.css">
-    <link rel="stylesheet" href="/css/projetos/projetos-styles.css">
-    <link rel="icon" href="/img/bug-outline.svg" type="image/svg+xml">
+    <link rel="stylesheet" href="css/projetos/projetos.css">
+    <link rel="stylesheet" href="css/projetos/projetos-styles.css">
+    <link rel="icon" href="img/icon/bug-outline.svg" type="image/svg+xml">
     <title>Projetos</title>
 </head>
 
@@ -39,13 +39,15 @@
                             <div class="risco" id="risco4"></div>
                             <div class="risco" id="risco5"></div>
                         </div>
-                        <img src="/img/stara/imperador.webp" alt="Imagem de fundo" id="imagem-fundo">
+                        <img src="img/stara/imperador.webp" alt="Imagem de fundo" id="imagem-fundo">
                         <div id="rampa"></div>
                     </figure>
                     <div id="text">
                         <h1 id="titulo">Imperador 3000 e 4000</h1>
-                        <p id="desc">A melhor eficiência em pulverização do autopropelido Imperador 3000 e 4000 da Stara é resultado das tecnologias inovadoras aliadas à qualidade de aplicação já comprovada.</p>
-                        <p id="desc2">Esse sistema mantém a calda em constante circulação no reservatório e nas tubulações, proporcionando:</p>
+                        <p id="desc">A melhor eficiência em pulverização do autopropelido Imperador 3000 e 4000 da Stara
+                            é resultado das tecnologias inovadoras aliadas à qualidade de aplicação já comprovada.</p>
+                        <p id="desc2">Esse sistema mantém a calda em constante circulação no reservatório e nas
+                            tubulações, proporcionando:</p>
                         <p id="numero1">01</p>
                         <p id="numero2">02</p>
                     </div>
