--- a/start.html
+++ b/start.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/start/start-styles.css">
-    <link rel="stylesheet" href="/css/start/start.css">
+    <link rel="stylesheet" href="css/start/start-styles.css">
+    <link rel="stylesheet" href="css/start/start.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" href="/img/bug-outline.svg" type="image/svg+xml">
+    <link rel="icon" href="img/icon/bug-outline.svg" type="image/svg+xml">
     <link
         href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Lexend+Deca:wght@100..900&family=Slabo+13px&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
@@ -17,42 +17,50 @@
 
 <body>
     <header>
-        <nav>
-            <section>
-                <article>
-                    <div class="imagem">
-                        <img src="/img/stara/logo-pt_BR.svg" alt="logo da stara na lateral" id="stara">
-                    </div>
-                    <div class="barra">
-                        <div class="switch" id="trilho">
-                            <div class="indicador"></div>
-                        </div>
-                    </div>
-                </article>
-            </section>
-        </nav>
+        <section></section>
     </header>
     <main>
+        <div class="barra">
+            <div class="switch" id="trilho">
+                <div class="indicador"></div>
+            </div>
+        </div>
         <section>
             <article>
-                <div class="front">
-                    <div id="quadrados">
+                <div class="corpo">
+                    <div id="quadrado">
                         <div id="quadrado1"></div>
                         <div id="quadrado2"></div>
                         <div id="quadrado3"></div>
+                        <div id="quadrado4"></div>
+                        <div id="quadrado5"></div>
+                        <div id="quadrado6"></div>
                     </div>
-                    <div id="bolas"></div>
-                    <div id="riscos"></div>
-                    <div id="video">
-                        <video id="stara-absoluta" autoplay muted loop>
-                            <source src="img/video/stara-absoluta.mp4" type="video/mp4">
-                        </video>
+                    <div id="risco">
+                        <div id="risco1"></div>
+                        <div id="risco2"></div>
+                        <div id="risco3"></div>
+                        <div id="risco4"></div>
+                        <div id="risco5"></div>
+                    </div>
+                    <article id="text">
+                        <h2 id="title">JOÃO GABRIEL KOBIELSKI</h2>
+                        <p id="desc">Me chamo João Gabriel Kobielski e te convido a conhecer meu portifólio.</p>
+                    </article>
+                    <section>
+                       <div class="seguinte">
+                            <a href="questionario.html" id="questionario">Questionario</a>
+                            <a href="sobre.html" id="sobre">Sobre</a>
+                            <img src="img/icon/maquina.png" id="maquina">
+                       </div>
+                    </section>
+                    <div id="image">
+                        <!--<img src="img/foto-perfil.png" id="foto-perfil">-->
                     </div>
                 </div>
             </article>
         </section>
     </main>
-
     <script src="js/start.js"></script>
 </body>
 
