--- a/sobre.html
+++ b/sobre.html
@@ -5,15 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/sobre/sobre.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" href="/img/bug-outline.svg" type="image/svg+xml">
+    <link rel="stylesheet" href="css/sobre/sobre-styler.css">
+    <link rel="icon" href="img/icon/bug-outline.svg" type="image/svg+xml">
     <link
         href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Lexend+Deca:wght@100..900&family=Slabo+13px&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
     <title>Sobre</title>
 </head>
-
 <body>
     <header>
         <nav>
@@ -43,7 +41,7 @@
                 </div>
                 <div class="capa">
                     <div id="foto">
-                        <img src="/img/drone.jpg" alt="foto de perfil" id="foto-perfil">
+                        <img src="../port/img/foto perfil.jpg" alt="foto de perfil" id="foto-perfil">
                     </div>
                     <div id="nome">
                         <h1>João Gabriel Kobielski</h1>
@@ -60,7 +58,10 @@
                             puteiro, até que um dia sua mãe colocou ele em um onibus na intenção de obrigar seu pai a
                             assumir a criança enviando a Passo Fundo</p>
                     </div>
-                    
+                    <div id="bottom">
+                        <a href="start.html" id="start" target="_blank">Start</a>
+                        <a href="questionario.html" id="questionario" target="_blank">Questionario</a>
+                    </div>
             </article>
         </section>
     </main>
