--- a/start.html
+++ b/start.html
@@ -3,65 +3,31 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/start/start-styles.css">
     <link rel="stylesheet" href="css/start/start.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" href="img/icon/bug-outline.svg" type="image/svg+xml">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Lexend+Deca:wght@100..900&family=Slabo+13px&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-        rel="stylesheet">
-    <title>Inicio</title>
+    <title>Start</title>
 </head>
 
 <body>
-    <header>
-        <section></section>
-    </header>
-    <main>
-        <div class="barra">
-            <div class="switch" id="trilho">
-                <div class="indicador"></div>
-            </div>
-        </div>
-        <section>
-            <article>
-                <div class="corpo">
-                    <div id="quadrado">
-                        <div id="quadrado1"></div>
-                        <div id="quadrado2"></div>
-                        <div id="quadrado3"></div>
-                        <div id="quadrado4"></div>
-                        <div id="quadrado5"></div>
-                        <div id="quadrado6"></div>
-                    </div>
-                    <div id="risco">
-                        <div id="risco1"></div>
-                        <div id="risco2"></div>
-                        <div id="risco3"></div>
-                        <div id="risco4"></div>
-                        <div id="risco5"></div>
-                    </div>
-                    <article id="text">
-                        <h2 id="title">JOÃO GABRIEL KOBIELSKI</h2>
-                        <p id="desc">Me chamo João Gabriel Kobielski e te convido a conhecer meu portifólio.</p>
-                    </article>
-                    <section>
-                       <div class="seguinte">
-                            <a href="questionario.html" id="questionario">Questionario</a>
-                            <a href="sobre.html" id="sobre">Sobre</a>
-                            <img src="img/icon/maquina.png" id="maquina">
-                       </div>
-                    </section>
-                    <div id="image">
-                        <!--<img src="img/foto-perfil.png" id="foto-perfil">-->
-                    </div>
-                </div>
-            </article>
-        </section>
-    </main>
-    <script src="js/start.js"></script>
-</body>
+    <nav>
+        <a href="https://www.stara.com.br/" target="_blank">
+            <img src="img/stara/logo-pt_BR.svg" id="stara">
+        </a>
+    </nav>
+    <section id="corpo">
 
+        <article id="text">
+            <h1>João Gabriel Kobielski</h1>
+            <p>Feito por Gabriel Kobielski</p>
+        </article>
+        <div id="bottom">
+            <a href="sobre.html" id="sobre" target="_blank">Sobre</a>
+            <a href="projetos.html" id="projetos" target="_blank">Projetos</a>
+            <h1 id="portfólio">PORTFÓLIO</h1>
+            <p id="recado">Por gentileza utilize esse projeto com o zoom em 80%</p>
+        </div>
+    </section>
+</body>
 </html>
