--- a/projetos.html
+++ b/projetos.html
@@ -22,6 +22,8 @@
         <section>
             <article>
                 <div class="capa">
+                    <a href="questionario.html" id="questionario" target="_blank">Questionario</a>
+                    <a href="start.html" id="start" target="_blank">Start</a>
                     <figure id="fundo">
                         <div id="quadrados">
                             <div class="quadrado" id="quadrado1"></div>
@@ -39,15 +41,17 @@
                             <div class="risco" id="risco4"></div>
                             <div class="risco" id="risco5"></div>
                         </div>
-                        <img src="img/stara/imperador.webp" alt="Imagem de fundo" id="imagem-fundo">
+                        <img src="img/foto perfil.jpg" alt="Imagem de fundo" id="imagem-fundo">
                         <div id="rampa"></div>
                     </figure>
                     <div id="text">
-                        <h1 id="titulo">Imperador 3000 e 4000</h1>
-                        <p id="desc">A melhor eficiência em pulverização do autopropelido Imperador 3000 e 4000 da Stara
-                            é resultado das tecnologias inovadoras aliadas à qualidade de aplicação já comprovada.</p>
-                        <p id="desc2">Esse sistema mantém a calda em constante circulação no reservatório e nas
-                            tubulações, proporcionando:</p>
+                        <h1 id="titulo">Projetos</h1>
+                        <p id="desc">Atualmente trabalho para uma das maiores empresas no ramo agricola, a Stara, meus
+                            objetivos são ser estabilazado dentro da empresa e me destacar por meio de competencia e
+                            comprometimento.</p>
+                        <p id="desc2">Meu segundo projeto que esta sendo trabalhado são em drones de pulverização
+                            agricola vizando em serem vendidos para agricultores de pequeno e médio porte, por serem
+                            mais acessiveis monetariamente.</p>
                         <p id="numero1">01</p>
                         <p id="numero2">02</p>
                     </div>
@@ -55,13 +59,7 @@
             </article>
         </section>
     </main>
-
-    <script>
-        function toggleMode() {
-            document.body.classList.toggle("light");
-            document.querySelector(".switch").classList.toggle("light");
-        }
-    </script>
+    <script src="js/start.js"></script>
 </body>
 
 </html>
